# my-esp32s3-env

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  idf_component.yml  main.c
main/bsp/controls/: bsp_controls.c  bsp_controls.h
main/bsp/dht11/: bsp_dht11.c  bsp_dht11.h
main/bsp/lcd/: bsp_lcd.c  bsp_lcd.h
main/bsp/led/: bsp_led.c  bsp_led.h
main/bsp/pwm/: bsp_pwm.c  bsp_pwm.h
main/bsp/rmt/: bsp_rmt.c  bsp_rmt.h
main/bsp/timer/: bsp_timer.c  bsp_timer.h
main/bsp/uart/: bsp_uart.c  bsp_uart.h
main/bsp/user_lvgl/: ulvgl.c  ulvgl.h  ulvgl_home.c  ulvgl_home.h  ulvgl_wifi.c  ulvgl_wifi.h
main/bsp/wifi/: bsp_wifi.c  bsp_wifi.h
main/display/: pic.h
